--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -81,6 +81,13 @@
                         <dd><a href="#"><i class="fa fa-sliders"></i> 课后测试</a></dd>
                     </dl>
                 </li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;"><i class="layui-icon">&#xe6b2;</i>每日作业</a>
+                    <dl class="layui-nav-child">
+                        <dd><a href="#"><i class="fa fa-tags"></i>分配作业</a></dd>
+                        <dd><a href="#"><i class="fa fa-sliders"></i>检查作业</a></dd>
+                    </dl>
+                </li>
                 <li class="layui-nav-item"><a href="#"><i class="layui-icon">&#xe62c;</i> 成绩分析</a>
                     <dl class="layui-nav-child">
                         <dd><a href="#"><i class="layui-icon">&#xe623;</i>开班考试成绩</a></dd>
