--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,10 +5,8 @@
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="/static/assets/img/favicon.ico">
     <title>JavaEE教学辅助系统后台管理</title>
     <link rel="stylesheet" href="/static/plugins/layui/css/layui.css">
-    <link rel="stylesheet" href="/static/plugins/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/assets/css/views/admin.css">
 </head>
 <body class="layui-layout-body">
@@ -64,25 +62,18 @@
                         <dd><a class="" href="#tests"><i class="layui-icon">&#xe60a;</i> 试卷管理</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item">
-                    <a class="" href="javascript:;"><i class="layui-icon">&#xe62a;</i>课程管理</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="#course_modules"><i class="layui-icon">&#xe62d;</i>课程模块</a></dd>
-                        <dd><a href="#course_sechedule"><i class="layui-icon">&#xe637;</i> 课表管理</a></dd>
-                        <dd><a href="#"><i class="layui-icon">&#xe60a;</i> 课程内容</a></dd>
-                        <dd><a href="#"><i class="fa fa-trademark"></i>课外辅助</a></dd>
-                    </dl>
-                </li>
+                <!--<li class="layui-nav-item">-->
+                    <!--<a class="" href="javascript:;"><i class="layui-icon">&#xe62a;</i>课程管理</a>-->
+                    <!--<dl class="layui-nav-child">-->
+                        <!--<dd><a href="#course_modules"><i class="layui-icon">&#xe62d;</i>课程模块</a></dd>-->
+                        <!--<dd><a href="#course_sechedule"><i class="layui-icon">&#xe637;</i> 课表管理</a></dd>-->
+                        <!--<dd><a href="#"><i class="layui-icon">&#xe60a;</i> 课程内容</a></dd>-->
+                        <!--<dd><a href="#"><i class="fa fa-trademark"></i>课外辅助</a></dd>-->
+                    <!--</dl>-->
+                <!--</li>-->
 
                 <li class="layui-nav-item">
-                    <a href="javascript:;"><i class="layui-icon">&#xe6b2;</i>考试管理</a>
-                    <dl class="layui-nav-child">
-                        <dd><a href="#"><i class="fa fa-tags"></i>开班考试</a></dd>
-                        <dd><a href="#"><i class="fa fa-sliders"></i> 课后测试</a></dd>
-                    </dl>
-                </li>
-                <li class="layui-nav-item">
-                    <a href="javascript:;"><i class="layui-icon">&#xe6b2;</i>每日作业</a>
+                    <a href="javascript:;"><i class="layui-icon">&#xe6b2;</i>试卷批阅</a>
                     <dl class="layui-nav-child">
                         <dd><a href="#"><i class="fa fa-tags"></i>分配作业</a></dd>
                         <dd><a href="#"><i class="fa fa-sliders"></i>检查作业</a></dd>
