试卷预览功能实现

--- a/src/main/webapp/WEB-INF/views/class_info/class_info.html
+++ b/src/main/webapp/WEB-INF/views/class_info/class_info.html
@@ -42,6 +42,9 @@
     <button class="layui-btn layui-btn-sm layui-btn-sm" lay-event="del">
         <i class="layui-icon">&#xe640;</i>
     </button>
+    <button class="layui-btn layui-btn-sm layui-btn-sm" lay-event="upGrade">
+        升级
+    </button>
     <button class="layui-btn layui-btn-sm layui-btn-sm">
        班级课表
     </button>
