试卷预览功能实现

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -75,8 +75,8 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon">&#xe6b2;</i>试卷批阅</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="#"><i class="fa fa-tags"></i>分配作业</a></dd>
-                        <dd><a href="#"><i class="fa fa-sliders"></i>检查作业</a></dd>
+                        <dd><a href="#"><i class="fa fa-tags"></i>课后测试</a></dd>
+                        <dd><a href="#"><i class="fa fa-sliders"></i>课后作业</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item"><a href="#"><i class="layui-icon">&#xe62c;</i> 成绩分析</a>
