--- a/src/main/webapp/WEB-INF/views/class_info/classAdd.html
+++ b/src/main/webapp/WEB-INF/views/class_info/classAdd.html
@@ -20,6 +20,7 @@
         <div class="layui-input-inline">
             <input type="text" id="className" name="className" required lay-verify="required" placeholder="请输入班级名称" autocomplete="off" class="layui-input">
             <input type="hidden" id="classId" name="id" >
+            <input type="hidden" id="modifyType" name="modifyType" >
         </div>
         <label class="layui-form-label">班级类型</label>
         <div class="layui-input-inline">
